implementado el carrito de compras mediante una funcion

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Pre entrega 2</h1>
     </header>
     <footer>
-        <script src="index2.js"></script>
+        <script src="index.js"></script>
     </footer>
 </body>
 </html>
