inicializar mediante boton

--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pre entrega 2</title>
+    <link rel="stylesheet" href="./style/style.css">
+    <title>Pre entrega 3</title>
 </head>
 <body>
     <header>
-        <h1>Pre entrega 2</h1>
+        <h1 class="titulo">Pre entrega 3</h1>
     </header>
+    <main>
+        <button id="initialize">Iniciar ciclo</button>
+    </main>
     <footer>
-        <script src="index.js"></script>
+        <script src="./js/index.js"></script>
     </footer>
 </body>
 </html>
