lista la 3era pre entrega

--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style.css">
-    <title>Pre entrega 3</title>
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Carrito de Compras</title>
 </head>
 <body>
-    <header>
-        <h1 class="titulo">Pre entrega 3</h1>
-    </header>
-    <main>
-        <button id="initialize">Iniciar ciclo</button>
-    </main>
-    <footer>
-        <script src="./js/index.js"></script>
-    </footer>
+    <h1 class="text-center">Tienda de Valentime Nails</h1>
+    <div class="mb-5">
+        <div>
+            <h2>Servicios</h2>
+            <div id="container-servicios" class="d-flex container-servicios"></div>
+        </div>
+        <div>
+            <h2>Productos</h2>
+            <div id="container-productos" class="d-flex container-productos"></div>
+        </div>
+    </div>
+    
+
+    <h2>Carrito de Compras</h2>
+    <div id="cart"></div>
+
+    <script src="./js/script.js"></script>
 </body>
 </html>
